substrate/primitives/api/test/tests/ui/adding_self_parameter.stderr
error: `self` as argument not supported.
  --> tests/ui/adding_self_parameter.rs:20:11
   |
20 |         fn test(&self);
   |                 ^
